# school_management_software

./: .gitignore  FILES_DELIVERED.md  IMPLEMENTATION_COMPLETE.md  LICENSING_CHECKLIST.md  LICENSING_IMPLEMENTATION.md  LICENSING_QUICKSTART.md  LICENSING_SETUP.md  PACKAGING.md  Pinaki.spec  README.md  SchoolFlow.spec  TERMS_OF_SERVICE.txt  VISUAL_OVERVIEW.md  alembic.ini  build_windows.ps1  github_keys_example.json  installer_script.iss  keys.json  launcher.py  license_cache.json  main.py  migrate_fee_rules.py  migrate_fees.py  pyproject.toml  requirements-dev.txt  requirements.txt  reset_schoolflow.bat  students_600_backup.pinaki-backup
alembic/: env.py
live_restore_backups/: pinaki-live-before-clean-20260412-111632.pinaki-backup  pinaki-live-restore-report-20260412-111632.json
school_admin/: __init__.py  auth.py  backup_restore.py  branding.py  config.py  data_repair.py  database.py  finance_utils.py  media.py  migrations.py  models.py  permissions.py  seed.py  utils.py
scratch/: debug_test_failure.py  inspect_backup.py  populate_backup.py  reset_for_demo.py  test_ledger_hardening.py  test_ledger_logic.py  test_logo_cache.py  test_permissions.py  test_receipts.py  test_reminder_logic.py  test_restore.py  verify_redirect.py
static/: __init__.py  app.js  styles.css
templates/: __init__.py  base.html  courses.html  dashboard.html  data_repair.html  fees.html  hostels.html  login.html  payments.html  recovery_users.html  settings.html  setup.html  setup_terms.html  students.html  transport.html  users.html
tests/: test_backup_restore.py  test_financial_summary.py  (+1 more)
(+20 files in other folders)
